Fix content spacing

--- a/src/app/directories/contact/page.module.css
+++ b/src/app/directories/contact/page.module.css
@@ -29,6 +29,7 @@
 
 .textarea{
   column-span: 1  ;
+  width: 94%;
   margin: 10px 10px 5px 10px;
   height: 35px;
   border: 2px solid #ccc;
